--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.3.Final</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.8.2.RELEASE</version>
+        </dependency>
 
 		<!-- Apache's Database Connection Pooling -->
 		<dependency>
@@ -213,6 +219,12 @@
 		  <artifactId>thumbnailator</artifactId>
 		  <version>[0.4, 0.5)</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>EquipeAR</finalName>
@@ -231,6 +243,18 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.11.v20150529</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
